--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>IXL | Math, Language Arts, Science, Social Studies, and Spanish</title>
+  <title>Computer Science 6th hour</title>
   <link rel="stylesheet" href="styles.css">
   <script src="script.js"></script>
 </head>
