--- a/main.html
+++ b/main.html
@@ -14,16 +14,16 @@
   </div>
   <div id="hub-menu">
     <ul>
-      <li onclick="loadGame('https://www.1v1.lol')">1v1.lol</li>
-      <li onclick="loadGame('https://www.splix.io')">Splix</li>
+      <li onclick="loadGame('https://www.crazygames.com › .io › Battle Royale')">1v1.lol</li>
+      <li onclick="loadGame('https://grims.pro')">Grims (Games)</li>
       <li onclick="loadGame('https://www.buildroyale.io')">BuildRoyale</li>
-      <li onclick="loadGame('https://www.suroi.io')">Suroi</li>
-      <li onclick="loadGame('https://eaglercraft.com/mc/1.8.8/')">Eaglercraft (Minecraft 1.8.8)</li>
-      <li onclick="loadGame('https://subwaysurf.io/subway-surfers.play')">Subway Surfers</li>
+      <li onclick="loadGame('https://www.coolmath-games.com')">CoolMath Games</li>
+      <li onclick="loadGame('https://eaglercraft.com')">Eaglercraft (Minecraft 1.8.8)</li>
+      <li onclick="loadGame('https://poki.com')">Subway Surfers</li>
       <li onclick="loadGame('https://www.google.com/webhp?igu=1')">Google Search</li>
-      <li onclick="loadGame('https://browser.rammerhead.org')">RammerHead Proxy</li>
+      <li onclick="loadGame('https://demo-opensource.rammerhead.org')">RammerHead Proxy</li>
       <li onclick="loadGame('https://soundbuttonsworld.com/')">SoundBoard</li>
-      <li onclick="loadGame('https://deadsimplechat.com/zLQ7R4Sjf')">Chatroom</li>
+      <li onclick="loadGame('https://geometry-game.io')">Geometry Dash</li>
     </ul>
     <div id="custom-url">
 >
