--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
   </div>
   <div id="hub-menu">
     <ul>
-      <li onclick="loadGame('https://grok.com')">Grok</li>
+      <li onclick="loadGame('https://chatgpt.com')">ChatGpt</li>
       <li onclick="loadGame('https://www.splix.io')">Splix</li>
       <li onclick="loadGame('https://www.buildroyale.io')">BuildRoyale</li>
       <li onclick="loadGame('https://www.suroi.io')">Suroi</li>
