--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
   </div>
   <div id="hub-menu">
     <ul>
-      <li onclick="loadGame('https://math-lessons-fun.lol/')">Math Lessons (trust)</li>
+      <li onclick="loadGame('https://scratch.mit.edu/mystuff/')">Scratch</li>
       <li onclick="loadGame('https://www.splix.io')">Splix</li>
       <li onclick="loadGame('https://www.buildroyale.io')">BuildRoyale</li>
       <li onclick="loadGame('https://www.suroi.io')">Suroi</li>
